deployment/dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smbplusplus
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smbplusplus
  template:
    metadata:
      labels:
        app: smbplusplus
    spec:
      containers:
        - name: smbplusplus
          image: ghcr.io/babbage88/smbplusplus:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8995
          command: ["/app/server"]
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "256Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: ghcr
