deployment/dev/cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: smbplusplus-svc
spec:
  selector:
    app: smbplusplus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8995
  type: ClusterIP
