deployment/dev/cnpg-load-balancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svclb-smbplusplus-cluster-dev-rw-lb
  namespace: development
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerIP: 10.0.0.72
  selector:
    cnpg.io/cluster: smbplusplus-cluster-dev
    role: primary
  ports:
    - name: postgres
      port: 9876
      targetPort: 5432
      protocol: TCP
